Login and create user/project in website (#315) * Web features  - Signup  - New project with template support  - Add member  - Dashboard * New connection scheme. URI to cr is does not include project. The connection dialog now has two phases. First project then branch selection * New resource for "projects", ProjectsResource and IProjectsClient * Added EntityManager to Server-method. We need to ensure that we use a single entity-manager * Role support * User and admin roles supported * User model now has connections to other users * Added members, created, lastUpdated and description to Project-model * Added new test project com.dynamo.cr.common.test * Added commons-io, commons-lang and jackson to common * Added json support for REST-services with automatic conversion from and to protobuf messages (currently disabled) * Added tests for new resource (ProjectsResource) * Added tests for user resource * Added new repository resource * Serialization wrapper for protobuf messages (SerializableMessage). Wicket requires a classes to be serializable

--- a/com.dynamo.cr.web/src/com/dynamo/cr/web/pages/BasePage.html
+++ b/com.dynamo.cr.web/src/com/dynamo/cr/web/pages/BasePage.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="/web/style.css"/>
+<link rel="stylesheet" href="style.css"/>
 <title>Dynamo</title>
 </head>
 <body>
 <div id="top">
-<img alt="Dynamo." src="/web/dynamo.png">
+<img alt="Dynamo." src="dynamo.png">
 <div id="bar">
 <a class="bar" href="">ABOUT</a>
 <a class="bar" href="">SUPPORT</a>
-<a class="bar" wicket:id="projects">MY PROJECTS</a>
+<a class="bar" wicket:id="dashboard">DASHBOARD</a>
 <a class="bar" wicket:id="login">LOGIN</a>
 <a class="bar" wicket:id="logout">LOGOUT</a>
 
