--- a/com.dynamo.cr.web/src/com/dynamo/cr/web/pages/BasePage.html
+++ b/com.dynamo.cr.web/src/com/dynamo/cr/web/pages/BasePage.html
@@ -9,7 +9,7 @@
 <div id="top">
 <img alt="Dynamo." src="dynamo.png">
 <div id="bar">
-<a class="bar" href="">ABOUT</a>
+<a class="bar" wicket:id="about">ABOUT</a>
 <a class="bar" href="">SUPPORT</a>
 <a class="bar" wicket:id="dashboard">DASHBOARD</a>
 <a class="bar" wicket:id="login">LOGIN</a>
