Major refactoring using MVP and activites in order to support bookmarking and "back button" ref #571

--- a/com.dynamo.cr.web2/war/Defold.html
+++ b/com.dynamo.cr.web2/war/Defold.html
@@ -17,7 +17,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Defold</title>
 
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
