Asciidoc support for static content on website ref #593 * Support for loading and display of asciidoc generated html files * Images are embedded in order to avoid path problems * New .nav class for navigation bars. Removed old hacks * Added modified asciidoc.css. See comments in file for further information * Root-panel is now centered with css auto margins

--- a/com.dynamo.cr.web2/war/Defold.html
+++ b/com.dynamo.cr.web2/war/Defold.html
@@ -17,6 +17,8 @@
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="Defold.css">
 
+    <link type="text/css" rel="stylesheet" href="asciidoc.css">
+
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
