--- a/com.dynamo.cr.web2/war/Defold.html
+++ b/com.dynamo.cr.web2/war/Defold.html
@@ -30,6 +30,21 @@
     <!-- be added before this line.                -->
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="defold/defold.nocache.js"></script>
+
+    <!--  Google analytics -->
+    <!--  NOTE: The account id is duplicated in Defold#GoogleAnalyticsHandler -->
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-83690-3']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+
   </head>
 
   <!--                                           -->
