Added missing warning message

--- a/com.dynamo.cr.web2/mock/index.html
+++ b/com.dynamo.cr.web2/mock/index.html
@@ -257,6 +257,17 @@
         <img src="google_openid.png"/>
     </p>
 
+
+  <h1>Message Example</h1>
+
+  <div>
+  <div class="message">
+    Some warning/error message
+  </div>
+  </div>
+  <br>
+  Should be placed top-center of page.<br>
+
   </div>
  </div>
  <div id="footer">
