Css implementation. case 512

--- a/com.dynamo.cr.web2/war/Defold.html
+++ b/com.dynamo.cr.web2/war/Defold.html
@@ -19,6 +19,8 @@
 
     <link type="text/css" rel="stylesheet" href="asciidoc.css">
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
