--- a/com.dynamo.cr.web2/war/Defold.html
+++ b/com.dynamo.cr.web2/war/Defold.html
@@ -9,6 +9,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
+    <!-- For google crawling -->
+    <meta name="fragment" content="!">
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
