Fix for internal 404s related to crawling internal page links. case 1102 * Custom user-agent when crawling (DefoldCrawler/1.0) * Internal page-links are not created for DefoldCrawler * Support for determine DefoldCrawler agent * Accept Chrome >= 12 (Google use Chrome 12 when rendering images)

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/Defold.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/Defold.html
@@ -158,12 +158,17 @@
     	            subString: "Firefox",
     	            identity: "Firefox"
     	        },
+                {
+                    string: navigator.userAgent,
+                    subString: "DefoldCrawler",
+                    identity: "DefoldCrawler"
+                },
     	        {
     	            string: navigator.vendor,
     	            subString: "Camino",
     	            identity: "Camino"
     	        },
-    	        {       // for newer Netscapes (6+)
+    	        {   // for newer Netscapes (6+)
     	            string: navigator.userAgent,
     	            subString: "Netscape",
     	            identity: "Netscape"
@@ -180,7 +185,7 @@
     	            identity: "Mozilla",
     	            versionSearch: "rv"
     	        },
-    	        {       // for older Netscapes (4-)
+    	        {   // for older Netscapes (4-)
     	            string: navigator.userAgent,
     	            subString: "Mozilla",
     	            identity: "Netscape",
@@ -199,9 +204,9 @@
     	            identity: "Mac"
     	        },
     	        {
-    	               string: navigator.userAgent,
-    	               subString: "iPhone",
-    	               identity: "iPhone/iPod"
+    	        	string: navigator.userAgent,
+    	            subString: "iPhone",
+    	            identity: "iPhone/iPod"
     	        },
     	        {
     	            string: navigator.platform,
