Initial static web-site generator. case 1132
* Simple static web-site generator tool using jinja2 
  and asciidoc (desite.py)
* Servlet, StaticServlet, for serving static pages
  with a "nice" url
* Memcache support in StaticServlet. Premature optim?
* 404 page and web.xml setup for 404
* jinja2-egg added
* Minimal asciidoc styling "for" bootstrap

--- a/com.dynamo.cr/com.dynamo.cr.web2/mock/dashboard.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/mock/dashboard.html
@@ -9,7 +9,7 @@
 <!-- Le styles -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="../war/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link href="bootstrap-defold.css" rel="stylesheet">
+<link href="../war/bootstrap-defold.css" rel="stylesheet">
 <style type="text/css">
 body {
     padding-top: 60px;
