Dashboard under /dashboard instead of /dashboard.html. case 1225

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/dashboard/dashboard.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/dashboard/dashboard.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="dashboard.css" rel="stylesheet">
-    <link href="asciidoc-new.css" rel="stylesheet">
+    <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/dashboard.css" rel="stylesheet">
+    <link href="/asciidoc-new.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <style type="text/css">
     body {
@@ -15,7 +15,7 @@
         padding: 9px 0;
     }
     </style>
-    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <title>Defold</title>
 
@@ -24,7 +24,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="defold/defold.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="/defold/defold.nocache.js"></script>
 
     <!--  Google analytics -->
     <!--  NOTE: The account id is duplicated in Defold#GoogleAnalyticsHandler -->
