Fixed tips and welcome-page copy. case 1266

--- a/com.dynamo.cr/com.dynamo.cr.editor/src/com/dynamo/cr/editor/welcome/welcome.html
+++ b/com.dynamo.cr/com.dynamo.cr.editor/src/com/dynamo/cr/editor/welcome/welcome.html
@@ -94,12 +94,25 @@ a {
     <div class="page-header">
         <h1>Welcome to Defold</h1>
     </div>
-    <h2>First step</h2>
+    <h2>First Step</h2>
     <p>
         The fastest way to get started is to run the introductory <a href="http://www.defold.com/doc/side_scroller">Side-Scroller</a>
         tutorial.
     </p>
-    <h2>Next step</h2>
+    <p>
+        If you want to start by finding your way around on your own, follow these steps:
+    </p>
+    <ol>
+        <li>Create a project in the <a href="http://www.defold.com/dashboard">Dashboard</a>.</li>
+        <li>Open the project (Ctrl+O or Cmd + O).</li>
+        <li>Open your files either from the Project Explorer to the left or by browsing using Ctrl+Shift+R or Cmd+Shift+R.</li>
+    </ol>
+    <p>
+        When you edit and save a file, it will appear in the Changed Files-view to the lower left. You can revert the changes using the context menu in that view.
+        The contents of the file are often displayed in the outline to the upper right.
+        The properties of whatever is selected is displayed to the lower right.
+    </p>
+    <h2>Next Step</h2>
     <p>
         For questions, bug-reports, suggestions and other feedback please visit the <a href="http://defold.userecho.com">user-forum</a>.
         Reference documentation, guides, script samples and tutorials are located here <a
